# sudoku_solver

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
checker/: CMakeLists.txt
checker/public/: checker.hpp
checker/src/: checker.cpp
checker/test/: checker_test.cpp
data/: sudokus.txt
gui/: CMakeLists.txt
gui/public/: gui.hpp  gui_application.hpp
gui/src/: gui.cpp
printer/: CMakeLists.txt
printer/src/: printer.cpp
reader/: CMakeLists.txt
reader/public/: reader.hpp
reader/src/: reader.cpp
reader/test/: reader_test.cpp  testfile_invalid_number.txt  testfile_negative_number.txt  testfile_too_many_numbers.txt  testfile_valid.txt
scripts/: build.sh  clean.sh  generate_test_cov_report.sh  install_dependencies.sh  run_unit_tests.sh
solver/: CMakeLists.txt
solver/public/: ISolver.hpp  free_functions_solver.hpp  solver_block_row_column_interaction.hpp  solver_hidden_pairs.h  solver_naked_pairs.h  solver_simple_exclude.hpp  solver_unique_candidates.hpp  solver_x_wing.hpp  sudoku_solver.hpp
solver/src/: solver_block_row_column_interaction.cpp  solver_hidden_pairs.cpp  solver_hidden_pairs.h  solver_naked_pairs.cpp  solver_simple_exclude.cpp  solver_simple_exclude.hpp  solver_unique_candidates.cpp
solver/test/: solver_test.cpp
src/: CMakeLists.txt  main.cpp
src/checker/public/: checker.hpp
src/checker/test/: checker_test.cpp
src/gui/: CMakeLists.txt
src/gui/public/: gui.hpp  gui_application.hpp
src/gui/src/: gui.cpp  gui_application.cpp
src/printer/public/: printer.hpp
src/reader/: CMakeLists.txt
src/reader/src/: reader.cpp
src/reader/test/: testfile_too_many_numbers.txt
src/solver/: CMakeLists.txt
src/solver/public/: ISolver.hpp  sudoku_solver.hpp
src/solver/src/: free_functions_solver.cpp  solver_block_row_column_interaction.cpp  solver_naked_pairs.cpp  solver_naked_pairs.h  solver_unique_candidates.hpp  solver_x_wing.cpp  sudoku_solver.cpp
src/solver/test/: solver_test.cpp
src/types/: CMakeLists.txt
src/types/public/: cell.hpp  subset_generator.hpp  sudoku.hpp
src/types/src/: cell_container.cpp  subset_generator.cpp
src/types/test/: sudoku_test.cpp
types/: CMakeLists.txt
types/public/: cell.hpp  cell_container.hpp  column.hpp  rectangle.hpp  row.hpp  sudoku.hpp
types/src/: cell.cpp  cell_container.cpp  rectangle.cpp  subset_generator.cpp  sudoku.cpp
types/test/: cell_container_test.cpp  cell_test.cpp  rectangle_test.cpp  subset_generator_test.cpp  sudoku_test.cpp
